# agent-toolkit

./: .gitignore  .gitlint  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  SECURITY.md  agent-registry.yaml  agentstack.code-workspace  install.sh  kagenti-adk.code-workspace  locki.toml  mise.toml  package-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml  policy.yaml  pyproject.toml  streaming-extension-spec.md  tasks.toml
.agent/rules/: agent-guidelines.md  ui-styling-guidelines.md
.claude/: settings.json
.cursor/commands/: file-issue.md  find-breaking-changes.md  write-documentation.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-revision.md
.github/workflows/: build-buildkit.yaml  build-postgres.yaml  ci.yaml  ci.yml  claude.yaml  docs-check.yaml  docs-deploy.yml  release.yaml  release.yml  scorecard.yaml  security-scans.yaml  stale.yaml
agents/: tasks.toml
agents/adk-support-agent/: Dockerfile  pyproject.toml
agents/adk-support-agent/adk_support_agent/: agent.py  citations.py  docs.py
agents/canvas/: Dockerfile  pyproject.toml
agents/chat/: Dockerfile  pyproject.toml
agents/deepagents_content_builder/: Dockerfile  README.md  pyproject.toml
agents/form/: Dockerfile  pyproject.toml
agents/generative-interface/: Dockerfile  pyproject.toml
agents/langgraph-reflection/: Dockerfile  README.md  pyproject.toml
agents/rag/: Dockerfile  pyproject.toml
apps/adk-cli/: README.md  pyproject.toml  tasks.toml
apps/adk-py/: README.md  pyproject.toml  tasks.toml
apps/adk-server/: Dockerfile  README.md  index.html  pyproject.toml  tasks.toml  template.env
apps/adk-ts/: README.md  eslint.config.js  package.json  prettier.config.js  tasks.toml  tsup.config.ts  vitest.config.ts
apps/adk-ui/: Dockerfile  README.md  eslint.config.js  next.config.ts  package.json  stylelint.config.js  tasks.toml  template.env
apps/agentstack-cli/: pyproject.toml  tasks.toml
apps/agentstack-sdk-py/: pyproject.toml  tasks.toml
apps/agentstack-server/: Dockerfile  pyproject.toml  tasks.toml
apps/agentstack-ui/: Dockerfile  (+3 more)
docs/: adk-rename-tracking.md  docs.json  llm.txt  package.json  poc-kagenti-integration.md  prettier.config.js  redirect-staging.js  tasks.toml
examples/: README.md  create-example.sh
examples/agent-integration/files/s3-translation-credentials/: README.md  input.txt  pyproject.toml
examples/agent-integration/files/s3-translation-credentials/src/s3_translation_credentials/: agent.py  client.py
examples/agent-integration/files/s3-translation-presigned/: .env.example  README.md  input.txt  pyproject.toml
examples/agent-integration/files/s3-translation-presigned/src/s3_translation_presigned/: agent.py  client.py
helm/: Chart.yaml  README.md  tasks.toml  values.yaml
(+1992 files in other folders)
