[project]
name = "adk-support-agent"
version = "1.0.0"
description = "ADK Support Assistant — answers questions about Kagenti ADK using the official documentation."
readme = "README.md"
authors = [{ name = "IBM Corp." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "kagenti-adk",
    "httpx",
    "openai",
]

[project.scripts]
server = "adk_support_agent.agent:run"

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]
